test/sema/parameter_mutability.dmz
// RUN: dmz %s -res-dump 2>&1 | filecheck %s

fn mutableParam(n: i32) -> void {
  n = 1;
  // CHECK: [[# @LINE - 1 ]]:3: error: 'n' cannot be mutated
}

fn immutableParam(n: i32) -> void {
  n = 1;
  // CHECK: [[# @LINE - 1 ]]:3: error: 'n' cannot be mutated
}

fn main() -> void {
}
